# video-preview-generator

./: LICENSE  README.md  cli.py  gui.pyw  launch.bat  main.py  pyproject.toml  requirements.txt  run_gui.bat  setup.bat
.github/workflows/: build.yml
src/: cli.py  gui.py
video_preview_generator/: generator.py  metadata.py
