[project]
name = "video_preview_generator"
version = "0.1.0"
description = "Generate thumbnail sheet previews for videos, with CLI and GUI interfaces"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.dependencies]
opencv-python = "^4.7"
Pillow = "^9.5"
click = "^8.1"
ttkbootstrap = "^1.8"

[project.scripts]
video-preview = "video_preview_generator.cli:main"
video-preview-gui = "video_preview_generator.gui:main"
